--- a/index.html
+++ b/index.html
@@ -3,31 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 첫 웹사이트</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>나의 웹사이트</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        /* 제목 스타일 /
+        .site-title {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 18px;
+            color: #003366;
+        }
+
+        / 설명 스타일 /
+        .description {
+            text-align: center;
+            margin-top: 150px;
+            font-size: 20px;
+            color: #333;
+        }
+
+        / 영상 스타일 /
+        .video-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+        }
+
+        iframe {
+            width: 80%;
+            height: 500px;
+            border: none;
+            border-radius: 8px;
+        }
+
+        / 추가적인 스타일 */
+        footer {
+            background-color: #003366;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>나의 첫 웹사이트에 오신 것을 환영합니다!</h1>
-    </header>
 
-    <nav>
-        <ul>
-            <li><a href="#">홈</a></li>
-            <li><a href="#">소개</a></li>
-            <li><a href="#">연락처</a></li>
-        </ul>
-    </nav>
+    <!-- 웹사이트 제목 (왼쪽 상단) -->
+    <div class="site-title">
+        나의 웹사이트
+    </div>
 
-    <section>
-        <h2>소개</h2>
-        <p>이 웹사이트는 HTML, CSS, JavaScript를 사용하여 만든 간단한 예시입니다.</p>
-    </section>
+    <!-- 설명 텍스트 (중앙 약간 위) -->
+    <div class="description">
+        <h1>웹사이트에 오신 것을 환영합니다!</h1>
+        <p>이곳은 웹사이트 설명과 다양한 콘텐츠를 제공하는 페이지입니다. 아래 영상을 확인해보세요.</p>
+    </div>
 
+    <!-- 영상 삽입 (유튜브 예시) -->
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+    </div>
+
+    <!-- 바닥글 -->
     <footer>
         <p>&copy; 2024 나의 웹사이트</p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
