--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
             background-color: #f4f4f4;
         }
 
-        /* 제목 스타일 /
+        /* 제목 스타일 (작게 조정) /
         .site-title {
             position: absolute;
             top: 20px;
             left: 20px;
-            font-size: 18px;
+            font-size: 14px; / 제목을 더 작게 설정 /
             color: #003366;
         }
 
-        / 설명 스타일 /
+        / 설명 스타일 (크게 조정) /
         .description {
             text-align: center;
             margin-top: 150px;
-            font-size: 20px;
+            font-size: 32px; / 설명 글자를 크게 설정 /
             color: #333;
+        }
+
+        .description p {
+            font-size: 18px; / 설명 아래 본문도 조금 키움 /
+            color: #555;
         }
 
         / 영상 스타일 /
@@ -43,7 +48,7 @@
             border-radius: 8px;
         }
 
-        / 추가적인 스타일 */
+        / 바닥글 스타일 */
         footer {
             background-color: #003366;
             color: white;
